@@ -19,7 +19,8 @@ package org.apache.solr.search;
 
 import java.io.StringWriter;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.IndexableField;
@@ -53,7 +54,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
     IndexSchema schema = h.getCore().getLatestSchema();
     schema =
         schema.addFieldTypes(
-            Collections.singletonList(
+            List.of(
                 schema.newFieldType(
                     "textType",
                     "solr.TextField", // redundant; TODO improve api
@@ -70,7 +71,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
             Arrays.asList(
                 schema.newField(LAZY_FIELD, "textType", map()),
                 schema.newField(BIG_FIELD, "textType", map("large", true))),
-            Collections.emptyMap(),
+            Map.of(),
             PERSIST_FALSE);
 
     h.getCore().setLatestSchema(schema);
