@@ -26,7 +26,6 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -35,15 +34,14 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.CloudLegacySolrClient;
-import org.apache.solr.client.solrj.apache.HttpClientUtil;
+import org.apache.solr.client.solrj.jetty.CloudJettySolrClient;
 import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
 import org.apache.solr.client.solrj.request.AbstractUpdateRequest;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
@@ -104,7 +102,8 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
   private static CloudHttp2SolrClient httpJettyBasedCloudSolrClient = null;
   private static CloudHttp2SolrClient httpJdkBasedCloudSolrClient = null;
-  private static CloudHttp2SolrClient zkBasedCloudSolrClient = null;
+  private static CloudHttp2SolrClient connectionStringZkBasedCloudSolrClient = null;
+  private static CloudHttp2SolrClient connectionStringHttpBasedCloudSolrClient = null;
 
   @BeforeClass
   public static void setupCluster() throws Exception {
@@ -154,37 +153,47 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
                 .getHttpClient()
             instanceof HttpJdkSolrClient);
 
-    zkBasedCloudSolrClient =
-        new CloudSolrClient.Builder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
-            .build();
-    assertTrue(zkBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
+    String zkConnString = cluster.getZkServer().getZkAddress();
+    connectionStringZkBasedCloudSolrClient = new CloudSolrClient.Builder(zkConnString).build();
     assertTrue(
-        zkBasedCloudSolrClient.getClusterStateProvider() instanceof ZkClientClusterStateProvider);
+        connectionStringZkBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
+    assertTrue(
+        connectionStringZkBasedCloudSolrClient.getClusterStateProvider()
+            instanceof ZkClientClusterStateProvider);
+
+    String httpConnString = String.join(",", solrUrls);
+    connectionStringHttpBasedCloudSolrClient = new CloudSolrClient.Builder(httpConnString).build();
+    assertTrue(
+        connectionStringHttpBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
+    assertTrue(
+        connectionStringHttpBasedCloudSolrClient.getClusterStateProvider()
+            instanceof HttpClusterStateProvider<?>);
   }
 
   @AfterClass
   public static void tearDownAfterClass() throws Exception {
     IOUtils.closeQuietly(httpJettyBasedCloudSolrClient);
     IOUtils.closeQuietly(httpJdkBasedCloudSolrClient);
-    IOUtils.closeQuietly(zkBasedCloudSolrClient);
+    IOUtils.closeQuietly(connectionStringZkBasedCloudSolrClient);
+    IOUtils.closeQuietly(connectionStringHttpBasedCloudSolrClient);
 
     shutdownCluster();
     httpJettyBasedCloudSolrClient = null;
     httpJdkBasedCloudSolrClient = null;
-    zkBasedCloudSolrClient = null;
+    connectionStringZkBasedCloudSolrClient = null;
+    connectionStringHttpBasedCloudSolrClient = null;
   }
 
   /** Randomly return the cluster's ZK based CSC, or HttpClusterProvider based CSC. */
   private CloudSolrClient getRandomClient() {
-    int randInt = random().nextInt(3);
-    if (randInt == 0) {
-      return zkBasedCloudSolrClient;
-    }
-    if (randInt == 1) {
-      return httpJettyBasedCloudSolrClient;
-    }
-    return httpJdkBasedCloudSolrClient;
+    CloudSolrClient[] clients = {
+      httpJettyBasedCloudSolrClient,
+      httpJdkBasedCloudSolrClient,
+      connectionStringZkBasedCloudSolrClient,
+      connectionStringHttpBasedCloudSolrClient
+    };
+
+    return clients[random().nextInt(clients.length)];
   }
 
   @Test
@@ -411,7 +420,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // Test Multi-Threaded routed updates for UpdateRequest
     try (CloudSolrClient threadedClient =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .sendUpdatesOnlyToShardLeaders()
             .withParallelUpdates(true)
             .withDefaultCollection("routing_collection")
@@ -696,7 +705,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("foo")
             .build()) {
       // important to have one replica on each node
@@ -771,7 +780,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void checkCollectionParameters() throws Exception {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("multicollection1")
             .build()) {
 
@@ -844,9 +853,11 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
           COLLECTION + ":" + (coll.getZNodeVersion() - 1)); // an older version expect error
 
       QueryResponse rsp = solrClient.query(q);
+      final NamedList<Object> response = rsp.getResponse();
+      final int stateVersionIdx =
+          response.indexOf(CloudSolrClient.STATE_VERSION, response.size() - 1);
       @SuppressWarnings({"rawtypes"})
-      Map m =
-          (Map) rsp.getResponse().get(CloudSolrClient.STATE_VERSION, rsp.getResponse().size() - 1);
+      Map m = stateVersionIdx == -1 ? null : (Map) response.getVal(stateVersionIdx);
       assertNotNull(
           "Expected an extra information from server with the list of invalid collection states",
           m);
@@ -891,13 +902,13 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   @Test
   public void testShutdown() throws IOException {
     try (CloudSolrClient client =
-        new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(DEAD_HOST_1), Optional.empty())
-            .build()) {
+        new RandomizingCloudSolrClientBuilder(List.of(DEAD_HOST_1), Optional.empty()).build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkConnectTimeout(100);
-        SolrException e = assertThrows(SolrException.class, client::connect);
+        SolrException e =
+            assertThrows(
+                SolrException.class, () -> client.getClusterStateProvider().getLiveNodes());
         assertTrue(e.getCause() instanceof TimeoutException);
       }
     }
@@ -907,13 +918,14 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void testWrongZkChrootTest() throws IOException {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress() + "/xyz/foo"),
-                Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress() + "/xyz/foo"), Optional.empty())
             .build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkClientTimeout(1000 * 60);
-        SolrException e = assertThrows(SolrException.class, client::connect);
+        SolrException e =
+            assertThrows(
+                SolrException.class, () -> client.getClusterStateProvider().getLiveNodes());
         assertTrue(e.getMessage().contains("cluster not found/not ready"));
         assertTrue(
             e.getMessage()
@@ -923,18 +935,14 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   }
 
   @Test
-  public void customHttpClientTest() throws IOException {
-    CloseableHttpClient client = HttpClientUtil.createClient(null);
-    try (CloudSolrClient solrClient =
-        new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
-            .withHttpClient(client)
-            .build()) {
-
-      assertSame(((CloudLegacySolrClient) solrClient).getLbClient().getHttpClient(), client);
-
-    } finally {
-      HttpClientUtil.close(client);
+  public void customHttpClientTest() throws Exception {
+    String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
+    try (HttpJettySolrClient httpClient = new HttpJettySolrClient.Builder(baseUrl).build()) {
+      try (CloudSolrClient cloudClient =
+          new CloudJettySolrClient.Builder(List.of(baseUrl)).withHttpClient(httpClient).build()) {
+        // Verify the CloudJettySolrClient uses the provided HttpJettySolrClient
+        assertSame(((CloudJettySolrClient) cloudClient).getHttpClient(), httpClient);
+      }
     }
   }
 
@@ -1045,12 +1053,12 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // NOTE: creating our own CloudSolrClient whose settings we can muck with...
     try (CloudSolrClient stale_client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withParallelUpdates(true)
             .sendDirectUpdatesToAnyShardReplica()
             .withDefaultCollection(COL)
             // don't let collection cache entries get expired, even on a slow machine...
-            .withCollectionCacheTtl(Integer.MAX_VALUE)
+            .withCollectionCacheTtl(1, TimeUnit.DAYS)
             .build()) {
 
       // do a query to populate stale_client's cache...
